Parcial: implementacion routing

--- a/rick_and_morty/src/components/filters/filters.module.scss
+++ b/rick_and_morty/src/components/filters/filters.module.scss
@@ -3,7 +3,7 @@
 .container{
   .section{
     display: flex;
-    align-items: end;
+    // align-items: end;
     justify-content: space-between;
     height: 11em;
     width: 100%;
